# thermocracy

./: .gitignore  README.md  index.html  package-lock.json  package.json
ThermocracyServer/: ThermocracyServer.sln
ThermocracyServer/ThermocracyServer/: CMakeLists.txt  CurrentTemperature.cpp  CurrentTemperature.h  EchoJson.cpp  EchoJson.h  JsonMessageBase.cpp  JsonMessageBase.h  JsonOfficeConfiguration.cpp  JsonOfficeConfiguration.h  JsonUserVote.cpp  JsonUserVote.h  JsonVoteSummery.cpp  JsonVoteSummery.h  Server.cpp  Server.h  Source.cpp  Thermocracy.cpp  Thermocracy.h  ThermocracyServer.vcxproj  ThermocracyServer.vcxproj.filters  UserJson.cpp  UserJson.h
ThermocracyServer/ThermocracyServer/3party/: jsoncpp.cpp
thermocracy-client/: application.css  index.html  main.js  networking.js  package-lock.json  package.json  renderer.js  requests.js
